--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<style>
 		body {
-	background-image:url("../vcss1/stripe.png");
+	background-image:url("stripe.png");
 		background-repeat:repeat;
 			margin: auto 0px;
 }
@@ -15,7 +15,7 @@ header{
 	width:1020px;
 	height: 150px;
 	font-family: 'Pacifico', cursive;
-	background-image: url("file:///Macintosh HD/Users/victoriaribeiro/Downloads/Pretest/Untitled-1.png");
+	background-image: url("headerbackgroup.png");
 	font-size: 45px;
 	src: url(<link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">);
 	
