--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ float: none;
 <title>index</title>
 </head>
 <body>
-	<header> <center> <h1>I love Monkeys </h1></center</header>
+	<header> <center> <h1> <font color="#FFFFFF">I love Monkeys</font> </h1></center</header>
 	<div id "container">
 		<nav></nav>
 			<section>
